@@ -1,3 +1,7 @@
+21 March 2012: Wouter
+	- new approach to NS fetches for DS lookup that works with
+	  cornercases, and is more robust and considers forwarders.
+
 19 March 2012: Wouter
 	- iana portlist updated.
 	- fix to locate nameservers for DS lookup with NS fetches.
